[package]
name = "kujira-ibc"
version = "0.1.0"
edition = "2021"
authors = ["Kujira Labs"]
description = "Interfaces for Kujira IBC"
license = "Apache-2.0"
repository = "https://github.com/Team-Kujira/cw-query-ibc/tree/master/packages/kujira-ibc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }